--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/imramkrishna/apiActivator#readme",
   "dependencies": {
     "@types/express": "^5.0.3",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.9.2"
   }
 }
